--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiofiles==0.4.0
 aiohttp==3.5.4
-#timm==0.6.7
-fastai==2.5.6
+timm==0.6.7
+fastai==2.7.9
 numpy==1.23.1
 python-multipart==0.0.5
 uvicorn==0.17.6
