--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         image: dadarek/wait-for-dependencies
         depends_on:
             mysql:
-              condition: service_completed_successfully
+              condition: service_healthy
         environment:
             MYSQL_PORT: "5432"
         networks:
@@ -14,7 +14,7 @@ services:
   mysql:
     image: mysql:5.7
     ports:
-      - "5432:5432"
+      - "3306:3306"
     networks:
       - backend
     volumes:
@@ -22,6 +22,11 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: "12345678"
       MYSQL_DATABASE: flaskmysql
+    healthcheck:
+      test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD -e 'SELECT count(*) FROM information_schema.tables' $$MYSQL_DATABASE"
+      interval: 1s
+      timeout: 3s
+      retries: 20
   web:
     build: .
     depends_on:
