change docker-compose, added host in the env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,15 +26,14 @@ services:
   web:
     build: .
     depends_on:
-      mysql:
-        condition: service_completed_successfully
       waitfordb:
         condition: service_completed_successfully
     ports:
       - 5000:5000
+    command: python app/server.py
     
-    environment:
-      MYSQL_HOST: mysql
-      MYSQL_USER: root
-      MYSQL_PASSWORD: "12345678"
-      MYSQL_DB: flaskmysql
+    #environment:
+    #  MYSQL_HOST: mysql
+    #  MYSQL_USER: root
+    #  MYSQL_PASSWORD: "12345678"
+    #  MYSQL_DB: flaskmysql
