--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,14 +30,7 @@ services:
         condition: service_completed_successfully
     ports:
       - 5000:5000
-    command: >
-      gunicorn -b 0.0.0.0:5000
-        --timeout 120
-        --access-logfile -
-        --reload
-        "app.server:app
-    #command: /flask/app/server.py
-
+    command: /flask/app/server.py
     
     environment:
       MYSQL_HOST: ${MYSQL_HOST}
